# website_my_mailchimp

./: .gitignore  Cargo.toml  Makefile  README.md  config.sample.ini
src/: lib.rs  main.rs
templates/: bottom.sample.html  top.sample.html
